dark mode button fix

--- a/src/styles/Details.module.scss
+++ b/src/styles/Details.module.scss
@@ -68,6 +68,7 @@
     width: 80%
 }
 .link2{
+    width: 10rem;
     text-decoration: none;
     color: grey;
 }
